<resources>
    <string name="app_name">Zoom2u</string>
    <string name="place_api_key">AIzaSyBKwJd0d1w6Bpi1yfE_MRY3MuHmkG7fEWE</string>
    <string name="google_api_ke">AIzaSyDXy3Z6OzAQ3siNfARS3Y54-sbhNQSBL0U</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edit">Edit</string>
    <string name="document">Document</string>
    <string name="courier">COURIER</string>
    <string name="next">Next</string>
    <string name="weigh1">Weight</string>
    <string name="login_txt_header">Zoom2u connects you with local drivers in your area for fast same day deliveries.</string>
    <string name="email_header">Email</string>
    <string name="pass_header">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="register"> Register</string>
    <string name="create_acc">Create a New Account</string>
    <string name="name_header">Name*</string>
    <string name="last_name_header">Last Name*</string>
    <string name="company_header">Company</string>
    <string name="phone_header">Phone Number*</string>
    <string name="email_header_login">Email*</string>
    <string name="pass_header_login">Password"</string>
    <string name="confirm_pass_header_login">Confirm Password"</string>
    <string name="find_us">How did you find us?</string>
    <string name="term_con">I Accept the customer </string>
    <string name="term_con1">I Accept the customer terms and conditions.</string>
    <string name="sign_up">Sign up</string>
    <string name="already_acc">Already have an account?</string>
    <string name="sign_in"> Sign in</string>
    <string name="signup_error_msg">Something went wrong Please try again.</string>
    <string name="home_header">What would you like to send today?</string>
    <string name="delivery_redesigned">Delivery, Redesigned.</string>
    <string name="home_text">At zoom2u we know how important it is to know where your parcel is and when it will be delivered.</string>
    <string name="get_a_quote">Get a Quote</string>
    <string name="make_a_booking">Make another booking</string>
    <string name="my_profile">My Profile</string>
    <string name="my_location">Saved Locations</string>
    <string name="change_pass">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_my_location">No locations saved yet.</string>
    <string name="default_drop">| DEFAULT DROP-OFF</string>
    <string name="default_pick">| DEFAULT PICK-UP</string>
    <string name="save_your_place">Save your favourite places</string>
    <string name="add_new">Add New</string>
    <string name="location_name">Contact name and business*</string>
    <string name="email_address">Email address</string>
    <string name="contact_number">Contact number*</string>
    <string name="address">Address*</string>
    <string name="pickup_location">Set as default pick-up location.</string>
    <string name="drop_location">Set as default drop-off location.</string>
    <string name="remove">Remove</string>
    <string name="save_location">Save Location</string>
    <string name="find_me">Find me</string>
    <string name="save">Save</string>
    <string name="current_pass">Current password*</string>
    <string name="new_pass">New password*</string>
    <string name="new_pass_cnfrm">New password confirmation*</string>
    <string name="delivery_history">Delivery History</string>
    <string name="no_delivery_history">Delivery history is empty!</string>
    <string name="picked_up">Picked Up</string>
    <string name="delivery">Delivery</string>
    <string name="accepted">Accepted</string>
    <string name="dropped_off">Dropped Off</string>
    <string name="delivery_details">Delivery details</string>
    <string name="pick_up_details">Pick-up Details</string>
    <string name="drop_off_details">Drop-off Details</string>
    <string name="pickup">Pickup</string>
    <string name="timing">Timing</string>
    <string name="requested">(Requested)</string>
    <string name="Drop_off">DropOff</string>
    <string name="actual">(Actual)</string>
    <string name="notes">Notes</string>
    <string name="add_delivery_details">Add Delivery Details</string>
    <string name="delivery_details1">Delivery Details</string>
    <string name="pickup_details">Pickup details</string>
    <string name="contact_name">Contact name*</string>
    <string name="company_name">Company name</string>
    <string name="level_suit">Level/Unit/Suit number</string>
    <string name="instruction">Any special delivery instructions</string>
    <string name="house">House/Apartment</string>
    <string name="pick_check1">Send SMS Tracking Link to Pickup Person</string>
    <string name="pick_check2">This is no-contact pickup</string>
    <string name="pick_check2_desc">(please provide a phone number above and provide notes regarding the location of the package)</string>
    <string name="dropOff_details1">Drop off details</string>
    <string name="drop_check1">This is a no-contact delivery (please provide authority to leave details below)</string>
    <string name="drop_check2">Authority to Leave (ATL)</string>
    <string name="drop_check2_desc">(please provide a phone number above and provide notes regarding the location of the package)</string>
    <string name="commercial">Commercial</string>
    <string name="parcel_after">Shipment available after</string>
    <string name="parcel_after_txt">(Your parcel will be picked up and delivered within the requested window, it may not be at this exact time)</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="required_before">Required before</string>
    <string name="weight">Total Shipment Weight</string>
    <string name="weight_txt">Select total weight(kg)*</string>
    <string name="weight_desc">(Total weight cannot exceed 100kg, and each item cannot exceed 30kg. This is for the health and safety of our drivers. If you require extra large items moved, please use the Bid Requests feature!)</string>
    <string name="items_we_not_send">Items we cannot send interstate</string>
    <string name="string_not_send">Authority to Leave at</string>
    <string name="package_type">Is the package a laptop or mobile phone ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other">Other (please specify)</string>
    <string name="documents_dimension">Documents Dimension</string>
    <string name="quantity">Quantity*</string>
    <string name="x">x</string>
    <string name="item_weight">Item Weight*</string>
    <string name="kg">Kg</string>
    <string name="total_weight">Total Weight*</string>
    <string name="length">Length*</string>
    <string name="cm">cm</string>
    <string name="width">Width*</string>
    <string name="height">Height*</string>
    <string name="confirm">Confirm</string>
    <string name="select">Select</string>
    <string name="pricing_payment">Pricing and Payment</string>
    <string name="delivery_feature">Show Delivery Features</string>
    <string name="quotes_valid">Your quotes are valid for </string>
    <string name="expired_quote">Your quotes have expired. Please click here to generate new quotes.</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="my_package">My package</string>
    <string name="delivery_time">Delivery time</string>
    <string name="booking_confirmation_term_con">I Accept the customer terms and conditions.</string>
    <string name="interstateAlertHeader">Thanks for using Zoom2u for your interstate delivery</string>
    <string name="interstateMsgTxt">Please note your delivery will go on a Qantas flight. Once it arrives at the destination airport our couriers can collects the parcel 20 minutes after arrival. \n\nIf the item is at the airport prior to 10am Qantas will deliver it to destination airport on the same day. If it’s after 10am there is still a good chance it will be delivered on the same day however it is not guaranteed. \n\nIf your item is extremely important and needs to be delivered same day Qantas does offer a next flight service, this will cost an additional $95 on your delivery. This means that once your parcel arrives at the airport 1 hour form this time it can go on the next available flight to your destination. If you like this option please place the booking and call our office on 1300 966 628 or email deliveries@zoom2u.com \n\nAir freight can be delayed, airports can close and there is a lot that is outside of our control. We therefore unfortunately cannot guarantee this service, that being said 99% of our customers are very happy with this service.</string>
    <string name="interstateAlertBelowHeader">To help with delivery please make sure</string>
    <string name="desc_txt">Any substance which, as presented for transport, is liable to explode, dangerously react, produce a flame or, dangerous emission of toxic, corrosive or flammable gases or vapours under conditions normally encountered in transport must not be sent interstate under any circumstance.The following is a non-comprehensive list of goods which cannot be accepted for interstate delivery: aerosols, hair tonic/hair sprays, batteries, explosives, corrosives, perfume, massage oils, pressurised or unpressurised cylinders and/or similar type containers, firearms and ammunition, radioactive material, paint fuel and/or fuel tanks etc.</string>
    <string name="reset_pass">Reset your Password</string>
    <string name="reset_pass_txt">Enter your Email and we\'ll send you a link to reset your password.</string>
    <string name="enter_email">Enter your Email</string>
    <string name="reset_pass1">Reset Password</string>
    <string name="title_home">Home</string>
    <string name="booking">Booking</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="second_inter_state1">Many seemingly harmless goods can be dangerous on board an aircraft.</string>
    <string name="second_inter_state2">I hereby declare that my shipment does not contain any of the above products, any item that would not be permitted in checked luggage on a passenger flight or any other dangerous good as outlined by IATA regulations.</string>
    <string name="second_inter_state3">Where possible, any old labelling has been removed to avoid any confusion or missorting during processing and shipping - This includes address, shipping and special handling labels.</string>
    <string name="second_inter_state4">I understand that, in the unlikely event my package is lost or damaged, Zoom2u can cover up to $300 in damages - This coverage will be void if my package is fragile or insufficiently packaged.</string>
    <string name="second_inter_state5">I understand that, in the unlikely event my package is lost or damaged, Zoom2u can cover up to $300 in damages - This coverage will be void if my package is fragile or insufficiently packaged.</string>
    <string name="second_inter_state6">I acknowledge this consignment may travel by air and make this statement for the purpose of section 23A of the Civil Aviation Act.</string>
    <string name="second_inter_state7">I understand that I am personally responsible for the above statements and that misdeclaring goods or knowingly or recklessly making false or misleading statement is a statutory offence punishable by imprisonment and/or a fine and may render me liable in damages - Including the return of my items at my expense.</string>
    <string name="second_inter_state8">Signed by:</string>
    <string name="second_inter_state9">First name (required)...</string>
    <string name="second_inter_state10">Last name (required)...</string>
</resources>