<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.log_in.forgot_password.ForgotPasswordActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_txt"
            style="@style/style_15_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset_pass"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/zoom2u_header"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="@id/header_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/zoom2u_black_blue" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt"
            style="@style/style_13_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset_pass_txt"
            android:gravity="center"
            android:minLines="2"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textColor="@color/base_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zoom2u_header" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email"
            app:hintTextColor="@color/txt_sub_color"
            app:boxStrokeWidth="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_signup_text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/reset_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            style="@style/style_15_bold"
            android:text="@string/reset_pass1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/chip_background"
            app:layout_constraintTop_toBottomOf="@+id/email_header" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>